still trying to fix links

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -48,4 +48,4 @@ params:
     heading: Your next
     headingSegment2: Theme
     description: Description
-    getStartedPath: /docs/
+    getStartedPath: /Maths-in-Electronics/docs/
